# qt-qml-elevation-chart

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Doxyfile  README.md  count.py  integrationexample.cpp  integrationexample.ui  main.cpp
.gitlab/: alse.yml
docs/: annotated.html  annotated_dup.js  classes.html  dir_09ccfa2fe33914d0e740f810b80a086d.html  dir_09ccfa2fe33914d0e740f810b80a086d.js  dir_09ccfa2fe33914d0e740f810b80a086d_dep.map  dir_09ccfa2fe33914d0e740f810b80a086d_dep.md5  dir_1a9852a19a2db34b2990ef662217d17c.html  dir_1a9852a19a2db34b2990ef662217d17c_dep.map  dir_2545e7c1163bcdccbd95685988228587.html  dir_2545e7c1163bcdccbd95685988228587.js  dir_2545e7c1163bcdccbd95685988228587_dep.map  dir_2545e7c1163bcdccbd95685988228587_dep.md5  dir_2aea9502fa5d249c7b1fd907ec2081f4.html  dir_2aea9502fa5d249c7b1fd907ec2081f4.js  dir_2aea9502fa5d249c7b1fd907ec2081f4_dep.map  dir_2aea9502fa5d249c7b1fd907ec2081f4_dep.md5  dir_55e3f750781ade2a309102426dc4d0e7.html  dir_55e3f750781ade2a309102426dc4d0e7.js  dir_55e3f750781ade2a309102426dc4d0e7_dep.map  dir_55e3f750781ade2a309102426dc4d0e7_dep.md5  dir_57bf5670139e6b7020bea693205143a5.html  dir_57bf5670139e6b7020bea693205143a5.js  dir_57bf5670139e6b7020bea693205143a5_dep.dot  dir_57bf5670139e6b7020bea693205143a5_dep.map  dir_57bf5670139e6b7020bea693205143a5_dep.md5  dir_5fc2e61a583663daefa39001dfe74395.html  dir_5fc2e61a583663daefa39001dfe74395.js  dir_5fc2e61a583663daefa39001dfe74395_dep.map  dir_5fc2e61a583663daefa39001dfe74395_dep.md5  dir_6719ab1f1f7655efc2fa43f7eb574fd1.html  dir_6719ab1f1f7655efc2fa43f7eb574fd1.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_6d58bfdbd44f6d974918c7dfc974761a.html  dir_6d58bfdbd44f6d974918c7dfc974761a.js  dir_6d58bfdbd44f6d974918c7dfc974761a_dep.map  dir_6d58bfdbd44f6d974918c7dfc974761a_dep.md5  dir_71d053966b743e9fc4c8ab3346993184.html  dir_71d053966b743e9fc4c8ab3346993184.js  dir_71d053966b743e9fc4c8ab3346993184_dep.map  (+97 more)
ec-backend/: elevationchart.cpp  elevationchart.h
ec-frontend/: ElevationChart.qml  FlightPoint.qml  IntegrationExample.qml  ec-frontend.qrc
examples/: Main.qml  elevation-chart-example.qrc  example.cpp  example.h  example.qml  example.ui  main.c++  main.cpp
include/: elevationgraph.cpp  elevationgraph.hpp  elevationwidget.hpp
js/: ElevationChart.qml  ElevationWidget.qml  FlightPoint.qml  IntegrationExample.qml  QPlot.qrc  ScrollSeries.qml  charts.qrc  qplot-js.qrc  qplotjs.qrc
libs/LPVL/: .gitlab-ci.yml  CMakeLists.txt  Doxyfile  README.md
libs/LPVL/docs/: annotated.html  annotated_dup.js  classes.html  dir_5231e71815281d5fbea39f01eadeabca.html  dir_5231e71815281d5fbea39f01eadeabca.js  dir_5231e71815281d5fbea39f01eadeabca_dep.map  dir_5231e71815281d5fbea39f01eadeabca_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_691cbd15b15420f66b8507d6e044b1ce.html  dir_691cbd15b15420f66b8507d6e044b1ce.js  dir_691cbd15b15420f66b8507d6e044b1ce_dep.map  dir_691cbd15b15420f66b8507d6e044b1ce_dep.md5  dir_79f9f206d562452bb5749a9daa86f603.html  dir_79f9f206d562452bb5749a9daa86f603.js  dir_79f9f206d562452bb5749a9daa86f603_dep.map  dir_79f9f206d562452bb5749a9daa86f603_dep.md5  dir_9d666d634149c007cb5a74cd67a44604.html  dir_9d666d634149c007cb5a74cd67a44604.js  dir_9d666d634149c007cb5a74cd67a44604_dep.map  dir_9d666d634149c007cb5a74cd67a44604_dep.md5  dir_fcb2a60e1810a51543a3cc3a113d0956.html  dir_fcb2a60e1810a51543a3cc3a113d0956.js  dir_fcb2a60e1810a51543a3cc3a113d0956_dep.map  dir_fcb2a60e1810a51543a3cc3a113d0956_dep.md5  files.html  functions.html  functions_func.html  functions_prop.html  graph_legend.html  hierarchy.html  hierarchy.js  index.html  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.map  inherit_graph_2.md5  inherit_graph_3.map  inherits.html  menudata.js  namespacemembers.html  (+5 more)
libs/LPVL/docs/d0/dbc/: classLPVL_1_1ScenegraphObject__inherit__graph.map
libs/LPVL/docs/d1/d4d/: structState-members.html
libs/LPVL/docs/d2/d3c/: classLPVL_1_1FadingGradientShader-members.html
libs/LPVL/docs/d2/da4/: utils_8c_09_09_source.html
libs/LPVL/docs/d3/d2f/: scenegraphobject_8h_source.html
libs/LPVL/docs/d4/dae/: classLPVL_1_1BasicPalette.html
libs/LPVL/docs/d5/d48/: basicpalette_8c_09_09_source.html
libs/LPVL/docs/d5/d60/: utils_8h_source.html
libs/LPVL/docs/d7/d0c/: classLPVL_1_1RadialGradientShader.html
libs/LPVL/docs/d7/d24/: radialgradientshader_8c_09_09_source.html
libs/LPVL/docs/d7/da0/: namespaceLPVL_1_1utils.html
libs/LPVL/docs/d7/da2/: namespaceLPVL.html
libs/LPVL/docs/d8/d16/: classLPVL_1_1RadialGradientShader-members.html
libs/LPVL/docs/d8/df3/: basicpalette_8h_source.html
libs/LPVL/docs/d9/d00/: classLPVL_1_1ScenegraphObject-members.html
libs/LPVL/docs/d9/d22/: classLPVL_1_1BasicPalette-members.html
libs/LPVL/docs/d9/dcb/: radialgradientshader_8h_source.html
libs/LPVL/docs/da/d43/: scenegraphobject_8c_09_09_source.html
libs/LPVL/docs/da/d9a/: classLPVL_1_1ScenegraphObject.html
libs/LPVL/docs/db/d09/: classLPVL_1_1FadingGradientShader.html
libs/LPVL/docs/db/d3b/: state_8h_source.html
libs/LPVL/docs/de/d1e/: fadinggradientshader_8c_09_09_source.html
libs/LPVL/docs/de/d66/: fadinggradientshader_8h_source.html
libs/LPVL/docs/de/def/: structState.html
libs/LPVL/docs/search/: all_1.js  all_2.js  all_5.js  all_7.js  all_9.js  all_a.js  classes_0.js  classes_1.js  classes_2.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  namespaces_0.js  pages_0.js  properties_0.js  properties_1.js  properties_3.js  properties_4.js  searchdata.js
libs/LPVL/include/LPVL/: BasicPalette  Materials  ScenegraphObject  Utils
libs/LPVL/include/LPVL/Materials/: FadingGradient  RadialGradient
libs/LPVL/src/c++/gadgets/: basicpalette.c++  basicpalette.h
libs/LPVL/src/c++/materials/: fadinggradientshader.c++  fadinggradientshader.h  radialgradientshader.c++  radialgradientshader.h  state.h
libs/LPVL/src/c++/scenegraph/: scenegraphobject.c++  scenegraphobject.h
libs/LPVL/src/c++/utils/: materials.c++  materials.h  utils.c++  utils.h
qml/: ElevationChart.qml  qml.qrc
resources/: elevation-chart-rc.qrc  (+1 more)
(+462 files in other folders)
